	* Port to SDL 2
	* Use hardware acceleration for drawing
	* HD graphics: Use mask overlays to generate high-res graphics out of the low-res ones of the original game
	* Maximum number of units per house (either map dependent or as a new game option "override maximum number of units")
	* Move to fix-point math for game logic as floating-point operations may differ between platforms and compilers
	* ADL music playback replaced: Now combines ScummVM AdlibDriver with Woody OPL chip emulation code from adplug
	* New key bindings: Cycle through construction yards with 'H' and factories with 'F'
	* Improve performance of Fog of War
	* Units can now be instructed to find the next repair yard on their own
	* Save game speed, scroll speed and sound volume as game settings
	* New game option "Manual Carryall Drops"
	* Save screenshots as PNG
	* 64-bit builds for Windows
	* Store complete map in save games (and replays) of single player custom games
	* Bugfix (Bug #72): Texture sizes were too big for older hardware; now textures are smaller than 2048x2048 (Reported by gdm85)
	* Bugfix (Bug #70): Changing the player name makes replays crash
	* Bugfix (Bug #67): Saving a game under Windows with (for filenames) illegal characters results in no save at all (Reported by vangrunz)
	* Bugfix (Bug #40): Bullets from gun turrets hit own building, e.g. other turrets (Reported by Dream Worker)
	* Bugfix (Bug 3610246): Mentat help used wrong houses (Reported by kuffar)

version 0.96.3
	* Full-featured map editor with support of Dune2-compatible maps as well as the extended map format
	* Integration of OpenSuperDune (a replacement to the original SuperDune)
	* Unit/Structure stats and the techtree is read from a config file
	* Used scaler (Nearest Neighbor or Scale2x) is configurable (default = Scale2x)
	* Game completely localizable (except helping menu)
	* Harvesters now have a return command